[Fix] 컴파일오류 해결